@@ -28,7 +28,10 @@ in unbroken state.
      >>
     \break 
     c4) f='2.(\break
-    a4)
+    a2.)
+    \stemUp
+    <d='' d'>8( <c c'> \break
+    <bis f' b>)
     
 }
 
