@@ -1,4 +1,12 @@
+2004-09-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/new-fingering-engraver.cc (stop_translation_timestep): new
+	property: add-stem-support
+
 2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/slur-scoring.cc (get_bound_info): only do
+	broken trend at the end of the line.
 
 	* VERSION (PACKAGE_NAME): release 2.3.16.
 
